<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BismillahJadi</string>
    <string name="LOGIN" tools:keep="@string/LOGIN">LOGIN</string>
    <string name="Input_Email">Input_Email</string>
    <string name="Input_Password">Input_Password</string>
    <string name="Login">Login</string>
    <string name="REGISTER" tools:keep="@string/REGISTER">REGISTER</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Password_Confirmation">Password_Confirmation</string>
    <string name="Register">Register</string>
    <string name="HOME">HOME</string>
    <string name="PROFILE">PROFILE</string>
    <string name="Update_Username">Update_Username</string>
    <string name="Full_Name">Full_Name</string>
    <string name="Date_of_Birth">Date_of_Birth</string>
    <string name="Address">Address</string>
    <string name="Update">Update</string>
    <string name="Logout">Logout</string>
    <string name="DETAIL">DETAIL</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- TODO: Remove or change this placeholder text -->

</resources>